--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
+theme: jekyll-theme-cayman
 title: [Artificial intelligence in dental research: A checklist for authors and reviewers](https://github.com/oddh2/A-checklist-for-dental-AI-studies.github.io)
