--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 
-title: A checklist for dental AI studies
+title: [ARTIFICIAL INTELLIGENCE IN DENTAL RESEARCH : A CHECKLIST FOR AUTHORS AND REVIEWERS](https://github.com/oddh2/A-checklist-for-dental-AI-studies.github.io)
