--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 
-title: [ARTIFICIAL INTELLIGENCE IN DENTAL RESEARCH : A CHECKLIST FOR AUTHORS AND REVIEWERS](https://github.com/oddh2/A-checklist-for-dental-AI-studies.github.io)
+title: ARTIFICIAL INTELLIGENCE IN DENTAL RESEARCH : A CHECKLIST FOR AUTHORS AND REVIEWERS
